Fixed radio button alignment if text is in multiple lines (#5312)

--- a/client/one/app/shared/components/radio-input/radio-input.component.less
+++ b/client/one/app/shared/components/radio-input/radio-input.component.less
@@ -40,6 +40,8 @@
     border: 1px solid darken(@border-color--default, 10%);
     border-radius: 50%;
     transition: all @duration-and-timing-fn--default;
+    align-self: flex-start;
+    margin-top: 3px;
 }
 
 .zem-radio-input__wrapper-label:hover:not(.zem-radio-input__wrapper-label--disabled)
